# necrostack

./: .gitignore  DIAGRAMS.md  FAQ.md  GETTING_STARTED.md  LICENSE  MATERIALS_INDEX.md  PITCH.md  PRESENTATION_CHECKLIST.md  QUICKSTART.md  README.md  SLIDES.md  SPEAKER_NOTES.md  USE_CASES.md  docker-compose.yml  dump.rdb  pyproject.toml  test_backend_simple.py
.github/workflows/: ci.yml
.kiro/specs/necrostack-framework/: design.md  requirements.md  tasks.md
examples/notification_pipeline/: README.md  main.py  sample_notifications.csv  sample_notifications.json
examples/notification_pipeline/organs/: __init__.py  audit.py  email_sender.py  push_sender.py  router.py  sms_sender.py  validate.py
examples/trading_orderbook/: README.md  main.py  sample_orders.csv  sample_orders.json
examples/trading_orderbook/organs/: __init__.py  audit_trail.py  matching_engine.py  risk_manager.py  settlement.py  validate_order.py
necrostack/: __init__.py
necrostack/apps/etl/: __init__.py  main.py
necrostack/apps/etl/organs/: __init__.py  clean_data.py  export_summary.py  extract_csv.py  transform_data.py
necrostack/apps/seance/: __init__.py  main.py
necrostack/apps/seance/organs/: __init__.py  ask_question.py  interpret_response.py  manifest_effect.py  summon_spirit.py
necrostack/backends/: __init__.py  base.py  inmemory.py  memory.py  redis.py  redis_backend.py
necrostack/core/: __init__.py  event.py  logging.py  organ.py  spine.py
tests/: __init__.py  conftest.py  test_backend_memory.py  test_backend_redis.py  test_circuit_breaker.py  test_edge_cases.py  test_etl_flow.py  test_event.py  test_failure_modes.py  test_inmemory.py  test_organ.py  test_redis.py  test_seance_flow.py  test_smoke.py  test_spine.py  test_spine_logging.py
