[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "necrostack"
version = "0.1.0"
description = "Minimal async-first event-driven micro-framework for Python 3.11+"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "NecroStack Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hypothesis]
max_examples = 100

[tool.mypy]
python_version = "3.11"
strict = true
