[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "necrostack"
version = "0.1.0"
description = "Async-first event-driven micro-framework for Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["event-driven", "async", "framework", "microservices", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
]
all = ["necrostack[redis,dev]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--timeout=30"

[tool.coverage.run]
source = ["necrostack"]
branch = true
omit = ["necrostack/apps/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.hypothesis]
profiles.dev.max_examples = 20
profiles.ci.max_examples = 100
